--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.24",
     "expo-status-bar": "~3.0.8",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "styled-components": "^6.1.19"
   },
   "private": true
 }
